// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowDefaultView should not render access selector or date picker if access condition is not required to select 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={11}
      sm={11}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should not render embargo date picker if access condition is set to closed access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={8}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={null}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view with styles 1`] = `
<FileUploadRowDefaultView
  accessConditionId={null}
  classes={
    Object {
      "icon": "FileUploadRowDefaultView-icon-1",
      "row": "FileUploadRowDefaultView-row-2",
    }
  }
  disabled={false}
  embargoDate="01/01/2017"
  index={0}
  locale={
    Object {
      "embargoDateClosedAccess": "No date required",
    }
  }
  name="test.pdf"
  onAccessConditionChange={[MockFunction]}
  onDelete={[MockFunction]}
  onEmbargoDateChange={[MockFunction]}
  requireOpenAccessStatus={true}
  size="100 MB"
/>
`;

exports[`Component FileUploadRowDefaultView should render embargo date picker if access condition is set to open access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={9}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(FileUploadEmbargoDate)
        canBeCleared={false}
        disabled={false}
        minDate={2020-03-16T03:05:18.404Z}
        onChange={[MockFunction]}
        value="01/01/2017"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
